sidebar on sample page. flyout side bar working. need to fix mobile overflow & sidebar flyout mobile.

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,6 +51,12 @@ header.portfolio-carousel {
     padding-left: 0px;
 }
 
+.navbar .container {
+	margin-right: 0px;
+	margin-left: 0px;
+	padding-right: 0px;
+	width: 100%;
+}
 
 .navbar {
 border-radius: 0px;
@@ -69,7 +75,7 @@ border-radius: 0px;
 
 @media (min-width: 768px){
 .not-front .navbar-default.navbar-expanded, .not-front .navbar-inverse.navbar-expanded {
-    background: #101010;
+    background: #222;
 }
 
 .not-front .navbar-fixed-top.navbar-expanded {
@@ -80,6 +86,25 @@ border-radius: 0px;
     padding: 0; 
 }
 
+}
+
+.sidebar-flyout {padding: 15px 18px;}
+
+.divider-light {
+height: 1px;
+margin: 9px 0;
+overflow: hidden;
+overflow: hidden;
+background-color: #777;
+}
+
+.dropdown-header {
+    display: block;
+    padding: 3px 20px;
+    font-size: 12px;
+    line-height: 1.42857143;
+    color: #FFC153;
+    white-space: nowrap;
 }
 
 
@@ -155,6 +180,10 @@ background: #FFC153;
     padding-top: 0;
     padding-bottom: 0;
     position: relative;
+	margin-right: 0px;
+	margin-left: 0px;
+	padding-right: 0px;
+	width: 100%;
 }
 
 #ui-wrapper .form-item-search-terms .form-control {
@@ -208,9 +237,21 @@ background:	#FFC153;
 padding: 20px 0;
 }
 
+.col-sm-3 {
+background: #fafafa;
+}
+
 /* Content */
 
 .content {padding: 20px 0;}
+
+.content-wrapper {
+overflow-x: hidden; /* Prevent scroll on narrow devices */
+}
+
+.content-wrapper::-webkit-scrollbar { 
+    display: none; 
+}
 
 /* Development */
 .instasquare img {
