--- a/css/gold-theme.css
+++ b/css/gold-theme.css
@@ -41,7 +41,8 @@ input.form-control:focus {
   -moz-transition: all 0.5s;
   transition: all 0.5s;
 }
-.btn-primary {
+.btn-primary,
+.btn-primary:focus {
   color: white;
   background-color: #FFC153;
   border-color: #FFC153;
@@ -50,14 +51,13 @@ input.form-control:focus {
   transition: all 0.5s;
 }
 .btn-primary:hover,
-.btn-primary:focus,
 .btn-primary.focus,
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #ed2a1d;
-  border-color: #ec2114;
+  background-color: #444;
+  border-color:  #444;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -247,10 +247,10 @@ hr.tint {
     border-radius: 5px;
   }
   .navbar-fixed-top.navbar-expanded {
-    padding: 30px 0;
+    padding: 0;
   }
   .navbar-fixed-top {
-    padding: 15px 0;
+    padding: 0;
     -webkit-transition: padding 0.5s;
     -moz-transition: padding 0.5s;
     transition: padding 0.5s;
@@ -327,7 +327,7 @@ header .scroll-down .btn {
   transition: all 0.5s;
 }
 header .scroll-down .btn:hover {
-  color: rgba(255, 255, 255, 0.5);
+  color: #333;
   border-color: rgba(255, 255, 255, 0.5);
   outline: none;
 }
